--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Okocha Ebube",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.5.3",
     "mongoose": "^5.9.1"
